feat: added /update endpoint for vehicles